--- a/template/index.html
+++ b/template/index.html
@@ -14,6 +14,8 @@
   <script type="text/javascript" src='static/js/app.js'></script>
   <script type="text/javascript" src='static/js/views/home.js'></script>
   <script type="text/javascript" src='static/js/models/signup.js'></script>
+  <script type="text/javascript" src='static/js/views/login.js'></script>
+  <script type="text/javascript" src='static/js/views/loginmodel.js'></script>
 </head>
 <body>
 <div id="content"> </div>
