fixing login html

--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src='static/js/views/home.js'></script>
   <script type="text/javascript" src='static/js/models/signup.js'></script>
   <script type="text/javascript" src='static/js/views/login.js'></script>
-  <script type="text/javascript" src='static/js/views/loginmodel.js'></script>
+  <script type="text/javascript" src='static/js/models/login.js'></script>
 </head>
 <body>
 <div id="content"> </div>
