--- a/template/index.html
+++ b/template/index.html
@@ -12,8 +12,9 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   <script type="text/javascript" src='static/js/app.js'></script>
-  <script type="text/javascript" src='static/js/views/home.js'></script>
-  <script type="text/javascript" src='static/js/models/signup.js'></script>
+  <script type="text/javascript" src='static/js/views/shell.js'></script>
+  <script type="text/javascript" src='static/js/views/register.js'></script>
+  <script type="text/javascript" src='static/js/models/register.js'></script>
   <script type="text/javascript" src='static/js/views/login.js'></script>
   <script type="text/javascript" src='static/js/models/login.js'></script>
 </head>
