--- a/template/index.html
+++ b/template/index.html
@@ -16,6 +16,7 @@
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   <script type="text/javascript" src='static/js/app.js'></script>
   <script type="text/javascript" src='static/js/views/shell.js'></script>
+  <script type="text/javascript" src='static/js/views/home.js'></script> 
   <script type="text/javascript" src='static/js/views/register.js'></script>
   <script type="text/javascript" src='static/js/models/register.js'></script>
   <script type="text/javascript" src='static/js/views/login.js'></script>
