fully working login

--- a/template/index.html
+++ b/template/index.html
@@ -14,7 +14,9 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src='static/js/jquery.cookie.js'></script>
   <script type="text/javascript" src='static/js/app.js'></script>
+  <script type="text/javascript" src='static/js/models/credential.js'></script>
   <script type="text/javascript" src='static/js/views/shell.js'></script>
   <script type="text/javascript" src='static/js/views/home.js'></script> 
   <script type="text/javascript" src='static/js/views/register.js'></script>
