--- a/template/index.html
+++ b/template/index.html
@@ -10,15 +10,17 @@
       }
   </style>
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">
+  <link href="static/js/lib/jasny-bootstrap/css/jasny-bootstrap.css" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" ></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src='static/js/jquery.cookie.js'></script>
+  <script type="text/javascript" src='static/js/lib/jquery.cookie.js'></script>
   <script type="text/javascript" src='static/js/app.js'></script>
   <script type="text/javascript" src='static/js/models/credential.js'></script>
   <script type="text/javascript" src='static/js/views/shell.js'></script>
   <script type="text/javascript" src='static/js/views/home.js'></script> 
+  <script type="text/javascript" src='static/js/views/upload.js'></script>
   <script type="text/javascript" src='static/js/views/register.js'></script>
   <script type="text/javascript" src='static/js/models/register.js'></script>
   <script type="text/javascript" src='static/js/views/login.js'></script>
