--- a/template/index.html
+++ b/template/index.html
@@ -25,6 +25,10 @@
   <script type="text/javascript" src='static/js/models/register.js'></script>
   <script type="text/javascript" src='static/js/views/login.js'></script>
   <script type="text/javascript" src='static/js/models/login.js'></script>
+  <script type="text/javascript" src='static/js/views/photo.js'></script>
+  <script type="text/javascript" src='static/js/models/photo.js'></script>
+
+
 </head>
 <body>
 <div id="content"> </div>
