--- a/template/index.html
+++ b/template/index.html
@@ -27,6 +27,8 @@
   <script type="text/javascript" src='static/js/models/login.js'></script>
   <script type="text/javascript" src='static/js/views/photo.js'></script>
   <script type="text/javascript" src='static/js/models/photo.js'></script>
+  <script type="text/javascript" src='static/js/views/category.js'></script>
+  <script type="text/javascript" src='static/js/models/category.js'></script>
 
 
 </head>
